sample/codepkg/objects/Conference__c.object
<CustomObject>
    <fields>
        <fullName>Completed_registrations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Registrations__c</fullName>
        <label>Total Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <summarizedField>Pass__c.Price__c</summarizedField>
        <summaryForeignKey>Pass__c.Conference__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Conference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>StartDate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Conference cannot be in the past</errorMessage>
    </validationRules>
</CustomObject>